# Minecraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Readme.md  launch.vs.json
doc/: 00-overview.md  01-setup.md  02-triangle-and-cube.md  03-camera.md  04-voxel-chunk.md  05-world-and-terrain.md  06-textures.md  07-lighting.md  08-interaction.md  09-crosshair-and-ui.md  10-player-physics.md  11-water.md  12-text-rendering.md  13-hotbar-and-inventory.md  14-main-menu.md  15-save-and-load.md  16-day-night-and-fog.md  17-graduation.md  README.md
include/glad/: glad.h
shaders/: basic.frag  basic.vert  chunk.frag  chunk.vert  ui.frag  ui.vert
src/: camera.hpp  glad.c  main.cpp  shader.hpp
src/player/: inventory.hpp  player.hpp  raycast.hpp
src/render/: font.hpp  outline.hpp  texture.cpp  ui.hpp
src/world/: block.hpp  block_textures.hpp  chunk.hpp  noise.hpp  save.hpp  terrain.hpp  world.hpp
src/world/render/: texture.hpp
